--- a/static/index.html
+++ b/static/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <footer>
-            <p>Powered by AI. Your resume's worst critic.</p>
+            <p><a href="https://www.linkedin.com/in/aryan-gupta-jiit3165/" target="_blank">Made by Aryan Gupta &#x1F918;&#x1F918;</p>
         </footer>
     </div>
 
